# jump-start-rust

./: README.md
.github/workflows/: cargo-test.yml
ingest-json-lambda/: .gitignore  Cargo.toml  README.md
ingest-json-lambda/.github/workflows/: cargo-test.yml
ingest-json-lambda/data/: kinesis_events.json
ingest-json-lambda/src/: helpers.rs  main.rs
ingest-json-lambda/src/helpers/: delta.rs  testing.rs
