[package]
name = "ingest-json-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["kinesis"] }
chrono = "0.4.26"
deltalake = { version = "0.13.1", features = ["s3", "json"] }

lambda_runtime = "0.8.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[package.metadata.lambda.deploy]
memory = 128
timeout = 900
tracing = "active"
# Function's execution role
role = "arn:aws:iam::*************:role/jump-start-rust-meetup"
env = { "TABLE_URI" = "s3://jump-start-rust-meetup/delta/logins", "TABLE_NAME" = "logins"}